# Retention-Agent

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  test.py
agents/: __init__.py  analysis_agent.py  email_agent.py  rag_agent.py
api/: __init__.py  server.py
chroma_db/: chroma.sqlite3
client_templates/: README.md  accountPayable.html  claims.html  deliveryDocket.html  projectInvitation.html  purchaseOrder.html  siteDiary.html  timesheet.html  updated_delivery_docket.html  variations.html
core/: __init__.py  config.py  data_loader.py  llm.py  models.py  prompts.py
data_request/: 12-weeks.json  8-weeks-jira.json  analysis_results.json  csTrial1.html  data_api.py  email_notifications.json  email_report.html  jira_bugs.json  retention_issues.json
email_service/: __init__.py  client_engagement.py  sender.py  templates.py
email_templates/: cs_report.html
graph/: __init__.py  state.py  workflow.py
rag/: __init__.py  embeddings.py  query_engine.py  vector_store.py
